# musarrif

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  README.md  biome.json  index.html  package-lock.json  package.json  stryker.config.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/: shell.init
.github/ISSUE_TEMPLATE/: incorrect-conjugation.yml  new-verb-request.yml
.github/workflows/: ci.yml
docs/: 01-overview.md  02-architecture.md  03-design-and-ui.md  04-code-style.md  05-testing.md  06-localization-and-lexicon.md  07-exercise-mode.md
public/: robots.txt  sitemap.xml
public/piper/: piper_phonemize.js  piper_worker.js
scripts/: debug-explain.mts  debug-srs.mts  elixirfm-compare.mts  elixirfm.mts  explain.mjs  explain.mts  generate-verb-tests.mts  report-srs.mts  srs.mts  srs.ts  test-elixirfm.mts  test-reverso.mts  test-wiktionary.mts  verb.mjs  verb.mts  wiktionary.mts  wiktionary.ts
scripts/lib/: elixirfm.mts  elixirfm.test.mts  generate-verb-tests.mts  generate-verb-tests.test.mts  paradigms.mts  parse-wiktionary.mts  parse-wiktionary.test.mts  render-verb-test.mts  render-verb-test.test.mts  reverso.mts  reverso.test.mts  verb-test-render.mts  verb-test-render.test.mts  verb-test-render.test.ts  verb-test-render.ts  wiktionary-parse.mts  wiktionary-parse.test.mts  wiktionary-parse.test.ts  wiktionary.mts  (+1 more)
specs/: conjugate.allium  exercise.allium
src/: app.test.tsx  app.tsx  index.css  main.tsx  routes.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+582 files in other folders)
