[package]
name = "musarrif"
version = "0.1.0"
description = "Muṣarrif desktop app"
authors = ["you"]
license = "GPL-3.0-only"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
